# digraphx-cpp

./: .gitignore  CMakeLists.txt  GEMINI.md  IFLOW.md  README.md  README_8md.html  SPDLOGGER_EXAMPLE.cpp  ThreadPool_8h.html  ThreadPool_8h__incl.map  ThreadPool_8h__incl.md5  ThreadPool_8h_source.html  _r_e_a_d_m_e_8md.html  _thread_pool_8h.html  about.html  about_8dox.html  all_ai.cpp  annotated.html  classCycleRatioAPI-members.html  classCycleRatioAPI.html  classMapAdapter.html  classMapAdapterBase.html  classMapConstAdapter.html  classMaxParametricSolver-members.html  classMaxParametricSolver.html  classMinCycleRatioSolver-members.html  classMinCycleRatioSolver.html  classMinParametricAPI-members.html  classMinParametricAPI.html  classMinParametricSolver-members.html  classMinParametricSolver.html  classNegCycleFinder-members.html  classNegCycleFinder.html  classNegCycleFinderQ-members.html  classNegCycleFinderQ.html  classThreadPool-members.html  classThreadPool.html  class_cycle_ratio_a_p_i.html  class_map_adapter.html  class_map_adapter_base.html  class_map_const_adapter.html  (+103 more)
.github/workflows/: install.yml  standalone.bak  standalone.yml  style.bak  style.yml  test.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: specific.cmake
documentation/: CMakeLists.txt  Doxyfile  conf.py  filter_readme.py  filter_readme.sh
include/: ThreadPool.h
include/cppcoro/: config.hpp  coroutine.hpp  generator.hpp  recursive_generator.hpp
include/digraphx/: greeter.h  logger.hpp  map_adapter.hpp  map_adaptor.hpp  min_cycle_ratio.hpp  min_parametric_q.hpp  neg_cycle.hpp  neg_cycle_q.hpp  parametric.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  files_1.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_10.js  (+36 more)
source/: dummy.cpp  greeter.cpp  logger.cpp  neg_cycle.tpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: greeter.cpp  test_coverage_gaps.cpp  test_cycle_ratio_raw.cpp  test_gaps_q.cpp  test_min_parametric_free.cpp  test_min_parametric_q.cpp  test_neg_cycle_find.cpp  test_neg_cycle_q.cpp  test_neg_cycle_raw.cpp  test_parametric.cpp  test_parametric_raw.cpp  test_rapidcheck.cpp  test_spdlogger.cpp
test_installed/: CMakeLists.txt
